# if you need to test small size executable (no backtrace crap):
# $ cargo +nightly run -Z build-std=std --release --example demo-full --no-default-features
# and uncomment this before building:
# cargo-features = ["panic-immediate-abort"]
[package]
name = "microui-redux"
authors = ["Raja Lehtihet", "Wael El Oraiby"]
version = "0.3.1"
edition = "2024"
readme = "README.md"
license = "BSD-3-Clause"
description = "Idiomatic Rust MicroUI (immediate mode GUI) library port"
repository = "https://github.com/NeoCogi/microui-redux"
autoexamples = false
categories = ["gui", "rendering"]

[lib]
name = "microui_redux"

[features]
default = ["builder", "save-to-rust"]
builder = ["dep:fontdue", "dep:png"]
png_source = ["dep:png"]
save-to-rust = []
example-backend = []
example-glow = ["example-backend", "dep:sdl2", "dep:glow"]
example-vulkan = [
    "example-backend",
    "dep:sdl2",
    "dep:ash",
    "dep:ash-window-handle",
    "dep:raw-window-handle",
]

[dependencies]
fontdue = { version = "0.9.2", optional = true }
bitflags = "2.4.1"
rs-math3d = "0.9.23"
png = { version = "0.18", optional = true }
rand = "0.9"
sdl2 = { version = "0.38", optional = true, features = ["raw-window-handle"] }
glow = { version = "0.16", optional = true }
ash = { version = "0.38", optional = true, default-features = false, features = [
    "linked",
] }
ash-window-handle = { package = "ash-window", version = "0.13", optional = true }
raw-window-handle = { version = "0.6", optional = true }

[dev-dependencies]

[[bin]]
name = "atlas_export"
path = "tools/atlas_export.rs"
required-features = ["builder", "save-to-rust"]

# Examples listed explicitly to ensure shared assets compile across feature sets.
[[example]]
name = "simple"
path = "examples/simple.rs"
required-features = ["example-backend"]

[[example]]
name = "demo-full"
path = "examples/demo-full.rs"
required-features = ["example-backend"]

[[example]]
name = "demo_full_gl"
path = "examples/demo_full_gl.rs"
required-features = ["example-glow"]

[[example]]
name = "demo_full_vk"
path = "examples/demo_full_vk.rs"
required-features = ["example-vulkan"]

# small size executable
# [profile.release]
# overflow-checks = false
# opt-level = "z"
# panic = "immediate-abort"
# lto = "fat"
# codegen-units = 1
# debug = "none"
