[package]
name = "microui-redux"
authors = ["Raja Lehtihet", "Wael El Oraiby"]
version = "0.4.0"
edition = "2024"
readme = "README.md"
license = "BSD-3-Clause"
description = "Idiomatic Rust MicroUI (immediate mode GUI) library port"
repository = "https://github.com/NeoCogi/microui-redux"
autoexamples = false
categories = ["gui", "rendering"]

[lib]
name = "microui_redux"

[features]
default = ["builder", "save-to-rust"]
builder = ["dep:fontdue", "dep:png"]
png_source = ["dep:png"]
save-to-rust = []
example-backend = []
# Example backends are only used by the examples; their crates live in
# [dev-dependencies], so the features simply toggle cfg-gated code.
example-glow = ["example-backend"]
example-vulkan = ["example-backend"]

[dependencies]
fontdue = { version = "0.9.2", optional = true }
bitflags = "2.4.1"
rs-math3d = "0.10"
png = { version = "0.18", optional = true }

[dev-dependencies]
rand = "0.9"
sdl2 = { version = "0.38", features = ["raw-window-handle"] }
glow = { version = "0.16" }
ash = { version = "0.38", default-features = false, features = ["linked"] }
ash-window-handle = { package = "ash-window", version = "0.13" }
raw-window-handle = { version = "0.6" }

[[bin]]
name = "atlas_export"
path = "tools/atlas_export.rs"
required-features = ["builder", "save-to-rust"]

# Examples listed explicitly to ensure shared assets compile across feature sets.
[[example]]
name = "simple"
path = "examples/simple.rs"
required-features = ["example-backend"]

[[example]]
name = "demo-full"
path = "examples/demo-full.rs"
required-features = ["example-backend"]

# small size executable
[profile.release]
overflow-checks = false
opt-level = "z"
panic = "abort"
lto = "fat"
codegen-units = 1
debug = "none"
