[package]
name = "microui-redux"
authors = ["Raja Lehtihet", "Wael El Oraiby"]
version = "0.5.0"
edition = "2024"
readme = "README.md"
license = "BSD-3-Clause"
description = "Idiomatic Rust MicroUI (immediate mode GUI) library port"
repository = "https://github.com/NeoCogi/microui-redux"
autoexamples = false
categories = ["gui", "rendering"]

[lib]
name = "microui_redux"

[features]
default = ["builder", "save-to-rust"]
builder = ["dep:fontdue", "dep:png"]
png_source = ["dep:png"]
save-to-rust = []
example-backend = []
# Example backends are only used by examples and are wired to optional deps.
example-glow = ["example-backend", "dep:sdl2", "dep:glow"]
example-vulkan = [
    "example-backend",
    "dep:sdl2",
    "dep:ash",
    "dep:ash-window-handle",
    "dep:raw-window-handle",
]
example-wgpu = [
    "example-backend",
    "dep:sdl2",
    "dep:wgpu",
    "dep:pollster",
    "dep:raw-window-handle",
]

[dependencies]
fontdue = { version = "0.9.2", optional = true }
bitflags = "2.4.1"
rs-math3d = "0.10"
png = { version = "0.18", optional = true }
sdl2 = { version = "0.38", features = ["raw-window-handle"], optional = true }
glow = { version = "0.16", optional = true }
ash = { version = "0.38", default-features = false, features = [
    "linked",
], optional = true }
ash-window-handle = { package = "ash-window", version = "0.13", optional = true }
raw-window-handle = { version = "0.6", optional = true }
wgpu = { version = "0.20", optional = true }
pollster = { version = "0.4", optional = true }

[dev-dependencies]
rand = "0.9"

[[bin]]
name = "atlas_export"
path = "tools/atlas_export.rs"
required-features = ["builder", "save-to-rust"]

# Examples listed explicitly to ensure shared assets compile across feature sets.
[[example]]
name = "simple"
path = "examples/simple.rs"
required-features = ["example-backend"]

[[example]]
name = "demo-full"
path = "examples/demo-full.rs"
required-features = ["example-backend"]

[[example]]
name = "calculator"
path = "examples/calculator.rs"
required-features = ["example-backend"]

# small size executable
[profile.release]
overflow-checks = false
opt-level = "z"
panic = "abort"
lto = "fat"
codegen-units = 1
debug = "none"
